--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,14 @@
-# Example environment variables for Inkwoven
-# Copy this file to .env and fill in your values
-# Never commit .env files to version control
+# Figma Design Tokens Sync Configuration
+# Copy this file to .env and fill in your actual values
+# Never commit .env to version control - it contains sensitive information
 
-# API Keys (optional - can also be set in the app UI)
-# These are for build-time configuration only
-# User API keys are stored encrypted in localStorage
+# Figma File Key - Get this from your Figma file URL
+# Example: https://www.figma.com/file/FILE_KEY/Your-File-Name
+FIGMA_FILE_KEY=
 
-# VITE_OPENAI_API_KEY=your_openai_api_key_here
-# VITE_ANTHROPIC_API_KEY=your_anthropic_api_key_here
-# VITE_GEMINI_API_KEY=your_gemini_api_key_here
+# Figma API Token - Generate from https://www.figma.com/developers/api#access-tokens
+# Keep this secret! Never share or commit this token.
+FIGMA_API_TOKEN=
 
-# Figma Design Tokens (for GitHub Actions)
-# Set these as GitHub Secrets in your repository settings
-# FIGMA_FILE_KEY=your_figma_file_key
-# FIGMA_API_TOKEN=your_figma_api_token
+# Optional: Custom output path for tokens (defaults to design-tokens/tokens.json)
+# OUTPUT_PATH=./design-tokens/tokens.json
