--- a/package.json
+++ b/package.json
@@ -13,29 +13,37 @@
     "test:e2e": "playwright test"
   },
   "dependencies": {
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "@tiptap/react": "^2.9.2",
-    "@tiptap/starter-kit": "^2.9.2",
-    "@tiptap/extension-text-style": "^2.9.2",
+    "@capacitor/cli": "^7.4.4",
+    "@capacitor/core": "^7.4.4",
+    "@capacitor/ios": "^7.4.4",
+    "@openai/chatkit-react": "^1.2.0",
+    "@tailwindcss/postcss": "^4.1.17",
     "@tiptap/extension-color": "^2.9.2",
     "@tiptap/extension-font-family": "^2.9.2",
     "@tiptap/extension-image": "^2.9.2",
+    "@tiptap/extension-text-style": "^2.9.2",
+    "@tiptap/react": "^2.9.2",
+    "@tiptap/starter-kit": "^2.9.2",
+    "@types/html-to-text": "^9.0.4",
     "dexie": "^4.0.1",
-    "zustand": "^5.0.2",
-    "jspdf": "^2.5.2",
-    "html-to-text": "^9.0.0"
+    "html-to-text": "^9.0.0",
+    "jsdom": "^27.2.0",
+    "jspdf": "^3.0.3",
+    "lucide-react": "^0.553.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
-    "@types/node": "^24.10.0",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
-    "@vitejs/plugin-react": "^5.1.0",
     "@playwright/test": "^1.48.2",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.5.2",
+    "@types/node": "^24.10.0",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "@vitejs/plugin-react": "^5.1.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
@@ -43,10 +51,10 @@
     "globals": "^16.5.0",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
-    "tailwindcss": "^4.0.0",
+    "tailwindcss": "^3.4.18",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.3",
     "vite": "^7.2.2",
-    "vitest": "^2.1.8"
+    "vitest": "^4.0.8"
   }
 }
